Less cursed config solution?